jc server some problems